# projectX

./: .gitignore  Makefile  logging.ini  pyproject.toml
app/: main.py
app/api/v1/todo/: model.py
app/auth/: router.py  users.py
app/core/: config.py
app/db/: database.db  db.py
migrates/: env.py
